# alpha-research

./: .gitignore  README.md  RESEARCH_LOG.md  pyproject.toml
alpha_research/: __init__.py
alpha_research/data/: __init__.py
alpha_research/eval/: __init__.py  backtest.py  metrics.py  rigor.py
alpha_research/factors/: __init__.py  carry.py  equity_zoo.py  macro_carry.py  microstructure.py  statarb.py  vrp.py
configs/: data_sources.yaml
docs/: _template.html  index.html  paper1.html  paper2.html  paper3.html  paper4.html  paper5.html  paper6.html  paper7.html  paper8.html  paper9.html
research/: lit_review_dossiers.md  literature_review.md  paper1_data_profile.md  paper1_equity_benchmark.md  paper2_data_profile.md  paper4_data_profile.md  paper6_data_profile.md
scripts/: 01_vrp_core.py  02_vrp_rigor.py  03_equity_vrp_benchmark.py  04_vrp_polish.py  10_fetch_fx_commodity.py  11_backfill_funding.py  12_carry_core.py  13_carry_rigor.py  14_statarb_core.py  15_statarb_rigor.py  16_fetch_factor_zoo.py  17_equity_zoo_core.py  18_factor_zoo_audit.py  19_microstructure_core.py  20_fetch_eia.py  21_macro_carry_core.py  22_portfolio_construction.py  40_paper1_figures.py  41_paper2_figures.py  42_paper3_figures.py  43_paper4_figures.py  44_paper5_figures.py  45_paper6_figures.py  46_paper7_figures.py  47_paper8_figures.py  48_paper9_figures.py  50_live_book.py  51_live_page.py  52_publish_live.sh  README.md  collect_deribit_surface.py  profile_deribit.py
