[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha_research"
version = "0.1.0"
description = "Cross-asset quantitative alpha research — rigorous, cost-aware, honest negative results welcome."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bryan Vine" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "pyarrow",
    "matplotlib",
    "pyyaml",
    "ccxt",
    "sqlalchemy",
    "psycopg2-binary",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_research*"]

[tool.ruff]
line-length = 100
target-version = "py311"
